[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain games. First project of python-developer hexlet course"
authors = ["ShelbaSK <ku4umov.sergey@gmail.com>"]
repository = "https://github.com/ShelbaSK/python-project-49"
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even_init:main"
brain-calc = "brain_games.scripts.brain_calc_init:main"
brain-gcd = "brain_games.scripts.brain_gcd_init:main"
brain-progression = "brain_games.scripts.brain_progression_init:main"
brain-prime = "brain_games.scripts.brain_prime_init:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
